--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="calculator">
         <div class="result">
-            <div class="calc"></div>
+            <div class="prev-calc"></div>
             <div class="current-calc">0</div>
         </div>
         <button class="clear">AC</button>
@@ -33,6 +33,12 @@
         <button class="number zero">0</button>
         <button class="number">.</button>
     </div>
+    <footer>
+        <div>
+            <p class="year">2023</p>
+            <p class="title">Jakub Urbański</p>
+        </div>
+    </footer>
      
 </body>
 </html>
